# VIGIL-AI-Visual-Intelligence-Global-Incident-Learning

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: requirements.txt
backend/app/: main.py
backend/tests/: conftest.py  test_alert_engine.py  test_health.py  test_model_ops.py
configs/: app.yaml  mlops.yaml
docker/dockerfiles/: backend.Dockerfile  frontend.Dockerfile  worker.Dockerfile
docs/: architecture.md  demo_script.md  interview_qa.md  kaggle_gpu_training.md  mlops.md  research_plan.md
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AlertRail.tsx  IncidentTimeline.tsx  LiveFeedCard.tsx  MetricsStrip.tsx
frontend/lib/: api.ts  types.ts
infra/k8s/: api-deployment.yaml  data-services.yaml  frontend-deployment.yaml
ml/: __init__.py  requirements.txt
ml/anomaly/: __init__.py  autoencoder.py  feature_anomaly.py  runtime.py
ml/multimodal/: __init__.py  explainer.py  prompt_templates.py
ml/orchestration/: __init__.py  prefect_flow.py
ml/scripts/: __init__.py  benchmark_pipeline.py  evaluate_anomaly.py  extract_features.py  multi_camera_load_test.py  quality_gate.py  simulate_feedback_loop.py  train_autoencoder.py  train_feature_anomaly.py
monitoring/: prometheus.yml
notebooks/: kaggle_gpu_training.ipynb
scripts/: bootstrap.ps1  deploy_aws.sh  kaggle_train.py  run_local.ps1  run_local.sh  run_mlops_flow.ps1
(+27 files in other folders)
