[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-multimodal-incident-intelligence"
version = "0.1.0"
description = "Real-Time Multimodal Incident Intelligence System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlalchemy>=2.0.31",
  "alembic>=1.13.2",
  "psycopg2-binary>=2.9.9",
  "redis>=5.0.7",
  "opencv-python>=4.10.0.84",
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "scikit-learn>=1.5.1",
  "torch>=2.3.1",
  "torchvision>=0.18.1",
  "ultralytics>=8.2.0",
  "transformers>=4.43.0",
  "mlflow>=2.14.1",
  "dvc>=3.51.2",
  "prefect>=2.19.8",
  "prometheus-client>=0.20.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "httpx>=0.27.0",
  "ruff>=0.5.3",
  "mypy>=1.10.1",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
